// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeScreenClock renders the correct (fake) initial time 1`] = `
<View>
  <View
    style={
      Object {
        "marginBottom": 20,
        "marginTop": 20,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 60,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      6:00 pm
    </Text>
  </View>
</View>
`;

exports[`HomeScreenClock renders the correct (fake) later time 1`] = `
<View>
  <View
    style={
      Object {
        "marginBottom": 20,
        "marginTop": 20,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 60,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      8:30 pm
    </Text>
  </View>
</View>
`;
